--- a/index.html
+++ b/index.html
@@ -1,7 +1,115 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Perfil profesional - Mis habilidades, proyectos, y experiencia">
+  <title>Favian Ayon</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gray-50 text-gray-800 font-sans">
+
+  <!-- Header -->
+  <header class="bg-gray-900 text-white">
+    <div class="container mx-auto p-8 text-center">
+      <div class="flex flex-col items-center">
+        <img src="https://via.placeholder.com/150" alt="Foto de Perfil" class="rounded-full shadow-md w-36 h-36">
+        <h1 class="text-4xl font-bold mt-4">Favian Ayon</h1>
+        <p class="mt-2 text-lg">Full Stack Developer | Cyber Security | IoT Maker</p>
+      </div>
+    </div>
+  </header>
+
+  <!-- Descripción -->
+  <section class="container mx-auto p-8">
+    <h2 class="text-2xl font-bold mb-4 text-gray-900">Sobre mí</h2>
+    <p class="text-gray-700 leading-relaxed">
+      Desarrollador e implmentador de tegnología, desarrollo de proyectos que faciliten y optimicen procesos por medio de la adptación de herramientas de tecnología basa en software y hardware considerando el espectro de posivilidades de las diferentes areas en torno al objetivo
+    </p>
+  </section>
+
+  <!-- Proyectos -->
+  <section class="container mx-auto p-8">
+    <h2 class="text-2xl font-bold mb-4 text-gray-900">Proyectos Destacados</h2>
+    <ul class="list-disc pl-6 text-gray-700">
+      <li>Sistema de administracion de inventarios, ventas, flotilla etc.</li>
+      <li>Sistema de gestión de reservas</li>
+      <li>Chatbot para WhatsApp Business </li>
+      <li>CMS personalizado</li>
+      <li>CRM/EPR a medida</li>
+      <li>Observador de almacen (IA)</li>
+    </ul>
+  </section>
+
+  <!-- Empresas -->
+  <section class="container mx-auto p-8">
+    <h2 class="text-2xl font-bold mb-4 text-gray-900">Empresas en las que he trabajado</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div class="bg-white p-4 rounded-lg shadow-md">
+        <h3 class="text-lg font-bold">SB Group</h3>
+        <p class="text-gray-700">CTO | 2017 </p>
+      </div>
+      <div class="bg-white p-4 rounded-lg shadow-md">
+        <h3 class="text-lg font-bold">Vargas</h3>
+        <p class="text-gray-700">Asesor de Tecnología | 2020</p>
+      </div>
+      <div class="bg-white p-4 rounded-lg shadow-md">
+        <h3 class="text-lg font-bold">Juflog</h3>
+        <p class="text-gray-700">Desarrollador| 2022-2023</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Habilidades -->
+  <section class="container mx-auto p-8">
+    <h2 class="text-2xl font-bold mb-4 text-gray-900">Habilidades y Conocimientos</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+      <div>
+        <h3 class="font-bold text-lg text-gray-800">Lenguajes de Programación</h3>
+        <ul class="list-disc pl-6 text-gray-700">
+          <li>PHP</li>
+          <li>JavaScript</li>
+          <li>Python</li>
+          <li>C++</li>
+          <li>MySQL</li>
+        </ul>
+      </div>
+      <div>
+        <h3 class="font-bold text-lg text-gray-800">Herramientas y Frameworks</h3>
+        <ul class="list-disc pl-6 text-gray-700">
+          <li>Laravel</li>
+          <li>Odoo</li>
+          <li>Home Assistant</li>
+          <li>Recalbox</li>
+          <li>GLPI</li>
+        </ul>
+      </div>
+      <div>
+        <h3 class="font-bold text-lg text-gray-800">Tecnología Maker</h3>
+        <ul class="list-disc pl-6 text-gray-700">
+          <li>Arduino</li>
+          <li>Raspberry Pi</li>
+          <li>Impresión 3D</li>
+        </ul>
+      </div>
+      <div>
+        <h3 class="font-bold text-lg text-gray-800">Habilidades Especiales</h3>
+        <ul class="list-disc pl-6 text-gray-700">
+          <li>Pilotaje de Drones</li>
+          <li>Seguridad de Redes</li>
+          <li>Administración de Servidores</li>
+          <li>Ingeniería inversa</li>
+          <li>Pentester</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-gray-900 text-white p-4">
+    <div class="container mx-auto text-center">
+      <p>&copy; 2024 Favian Ayon. </p>
+    </div>
+  </footer>
 </body>
 </html>
