Update profile image in index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="bg-gray-900 text-white">
     <div class="container mx-auto p-8 text-center">
       <div class="flex flex-col items-center">
-        <img src="https://via.placeholder.com/150" alt="Foto de Perfil" class="rounded-full shadow-md w-36 h-36">
+        <img src="https://lh3.googleusercontent.com/pw/AP1GczPmBhNJRNrNf6lY-5I9dR51TwtP21US-BRbpo75DbIMDhdLpjAe2MBomySYjb-cPXeobPkQlNaSoz2u5eWxXpCjEziTigwgzmYDtNX5MBe6Eep4bIqE=w1038-h583-no" alt="Favian Ayon" class="rounded-full shadow-md w-36 h-36">
         <h1 class="text-4xl font-bold mt-4">Favian Ayon</h1>
         <p class="mt-2 text-lg">Full Stack Developer | Cyber Security | IoT Maker</p>
       </div>
